--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <section class="hero">
       <div class="hero__container clr-ter-text text-align">
         <h3 class="fs-s mt clr-ter-xl-text">Enjoy Watching Movies</h3>
-        <h2 class="fs-xl mt clr-ter-text" style="--fs-xl : 2.5em;">Book Your Favourite Movies</h2>
+        <h2 class="fs-xl mt clr-ter-text" style="--fs-xl: 2.5em">
+          Book Your Favourite Movies
+        </h2>
         <div class="movie-name-container flex flex-row flex-jc-c flex-ai-c mt">
           <svg
             class="left-arrow"
@@ -44,7 +46,50 @@
           </svg>
           <h2 class="fs-m ml mr clr-ter-l-text">Extraction</h2>
           <svg
-          class="right-arrow"
+            class="right-arrow"
+            width="32"
+            height="32"
+            viewBox="0 0 32 32"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M2 16C2 19.713 3.475 23.274 6.1005 25.8995C8.72601 28.525 12.287 30 16 30C19.713 30 23.274 28.525 25.8995 25.8995C28.525 23.274 30 19.713 30 16C30 12.287 28.525 8.72601 25.8995 6.1005C23.274 3.475 19.713 2 16 2C12.287 2 8.72601 3.475 6.1005 6.1005C3.475 8.72601 2 12.287 2 16ZM32 16C32 20.2435 30.3143 24.3131 27.3137 27.3137C24.3131 30.3143 20.2435 32 16 32C11.7565 32 7.68687 30.3143 4.68629 27.3137C1.68571 24.3131 0 20.2435 0 16C0 11.7565 1.68571 7.68687 4.68629 4.68629C7.68687 1.68571 11.7565 0 16 0C20.2435 0 24.3131 1.68571 27.3137 4.68629C30.3143 7.68687 32 11.7565 32 16ZM23 15C23.2652 15 23.5196 15.1054 23.7071 15.2929C23.8946 15.4804 24 15.7348 24 16C24 16.2652 23.8946 16.5196 23.7071 16.7071C23.5196 16.8946 23.2652 17 23 17H11.414L15.708 21.292C15.801 21.385 15.8747 21.4954 15.925 21.6168C15.9754 21.7383 16.0013 21.8685 16.0013 22C16.0013 22.1315 15.9754 22.2617 15.925 22.3832C15.8747 22.5046 15.801 22.615 15.708 22.708C15.615 22.801 15.5046 22.8747 15.3832 22.925C15.2617 22.9754 15.1315 23.0013 15 23.0013C14.8685 23.0013 14.7383 22.9754 14.6168 22.925C14.4954 22.8747 14.385 22.801 14.292 22.708L8.292 16.708C8.19887 16.6151 8.12499 16.5048 8.07457 16.3833C8.02416 16.2618 7.99821 16.1315 7.99821 16C7.99821 15.8685 8.02416 15.7382 8.07457 15.6167C8.12499 15.4952 8.19887 15.3849 8.292 15.292L14.292 9.292C14.4798 9.10423 14.7344 8.99874 15 8.99874C15.2656 8.99874 15.5202 9.10423 15.708 9.292C15.8958 9.47977 16.0013 9.73445 16.0013 10C16.0013 10.2656 15.8958 10.5202 15.708 10.708L11.414 15H23Z"
+              fill="rgba(255, 255, 255, .8)"
+            />
+          </svg>
+        </div>
+      </div>
+      <div class="search__container flex flex-row flex-jc-c">
+        <input
+          maxlength="20"
+          type="text"
+          class="movie-search-field clr-sec-l-text"
+          placeholder="Search among all the movies"
+        />
+        <div class="img-container clr-ter-bg">
+          <img
+            class="search-icon"
+            src="./assets/images/search.svg"
+            alt="search icon"
+          />
+        </div>
+      </div>
+    </section>
+
+    <!-- movie category  -->
+    <section class="category grid clr-ter-bg mt mb" style="--mb:3em;">
+      <div class="description flex flex-col clr-pri-bg">
+        <h2 class="fs-mid">Categories</h2>
+        <p class="fs-s clr-sec-xl-text mt" style="--mt : 0.5em;">
+          Select Your Favourite Categoty and Explore all of them
+        </p>
+      </div>
+      <div class="icons flex flex-row">
+        <svg
+          class="left-arrow"
           width="32"
           height="32"
           viewBox="0 0 32 32"
@@ -55,17 +100,55 @@
             fill-rule="evenodd"
             clip-rule="evenodd"
             d="M2 16C2 19.713 3.475 23.274 6.1005 25.8995C8.72601 28.525 12.287 30 16 30C19.713 30 23.274 28.525 25.8995 25.8995C28.525 23.274 30 19.713 30 16C30 12.287 28.525 8.72601 25.8995 6.1005C23.274 3.475 19.713 2 16 2C12.287 2 8.72601 3.475 6.1005 6.1005C3.475 8.72601 2 12.287 2 16ZM32 16C32 20.2435 30.3143 24.3131 27.3137 27.3137C24.3131 30.3143 20.2435 32 16 32C11.7565 32 7.68687 30.3143 4.68629 27.3137C1.68571 24.3131 0 20.2435 0 16C0 11.7565 1.68571 7.68687 4.68629 4.68629C7.68687 1.68571 11.7565 0 16 0C20.2435 0 24.3131 1.68571 27.3137 4.68629C30.3143 7.68687 32 11.7565 32 16ZM23 15C23.2652 15 23.5196 15.1054 23.7071 15.2929C23.8946 15.4804 24 15.7348 24 16C24 16.2652 23.8946 16.5196 23.7071 16.7071C23.5196 16.8946 23.2652 17 23 17H11.414L15.708 21.292C15.801 21.385 15.8747 21.4954 15.925 21.6168C15.9754 21.7383 16.0013 21.8685 16.0013 22C16.0013 22.1315 15.9754 22.2617 15.925 22.3832C15.8747 22.5046 15.801 22.615 15.708 22.708C15.615 22.801 15.5046 22.8747 15.3832 22.925C15.2617 22.9754 15.1315 23.0013 15 23.0013C14.8685 23.0013 14.7383 22.9754 14.6168 22.925C14.4954 22.8747 14.385 22.801 14.292 22.708L8.292 16.708C8.19887 16.6151 8.12499 16.5048 8.07457 16.3833C8.02416 16.2618 7.99821 16.1315 7.99821 16C7.99821 15.8685 8.02416 15.7382 8.07457 15.6167C8.12499 15.4952 8.19887 15.3849 8.292 15.292L14.292 9.292C14.4798 9.10423 14.7344 8.99874 15 8.99874C15.2656 8.99874 15.5202 9.10423 15.708 9.292C15.8958 9.47977 16.0013 9.73445 16.0013 10C16.0013 10.2656 15.8958 10.5202 15.708 10.708L11.414 15H23Z"
-            fill="rgba(255, 255, 255, .8)"
+            fill="rgba(0, 0, 0, .8)"
           />
         </svg>
-        </div>
+        <svg
+          class="right-arrow ml"
+          width="32"
+          height="32"
+          viewBox="0 0 32 32"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M2 16C2 19.713 3.475 23.274 6.1005 25.8995C8.72601 28.525 12.287 30 16 30C19.713 30 23.274 28.525 25.8995 25.8995C28.525 23.274 30 19.713 30 16C30 12.287 28.525 8.72601 25.8995 6.1005C23.274 3.475 19.713 2 16 2C12.287 2 8.72601 3.475 6.1005 6.1005C3.475 8.72601 2 12.287 2 16ZM32 16C32 20.2435 30.3143 24.3131 27.3137 27.3137C24.3131 30.3143 20.2435 32 16 32C11.7565 32 7.68687 30.3143 4.68629 27.3137C1.68571 24.3131 0 20.2435 0 16C0 11.7565 1.68571 7.68687 4.68629 4.68629C7.68687 1.68571 11.7565 0 16 0C20.2435 0 24.3131 1.68571 27.3137 4.68629C30.3143 7.68687 32 11.7565 32 16ZM23 15C23.2652 15 23.5196 15.1054 23.7071 15.2929C23.8946 15.4804 24 15.7348 24 16C24 16.2652 23.8946 16.5196 23.7071 16.7071C23.5196 16.8946 23.2652 17 23 17H11.414L15.708 21.292C15.801 21.385 15.8747 21.4954 15.925 21.6168C15.9754 21.7383 16.0013 21.8685 16.0013 22C16.0013 22.1315 15.9754 22.2617 15.925 22.3832C15.8747 22.5046 15.801 22.615 15.708 22.708C15.615 22.801 15.5046 22.8747 15.3832 22.925C15.2617 22.9754 15.1315 23.0013 15 23.0013C14.8685 23.0013 14.7383 22.9754 14.6168 22.925C14.4954 22.8747 14.385 22.801 14.292 22.708L8.292 16.708C8.19887 16.6151 8.12499 16.5048 8.07457 16.3833C8.02416 16.2618 7.99821 16.1315 7.99821 16C7.99821 15.8685 8.02416 15.7382 8.07457 15.6167C8.12499 15.4952 8.19887 15.3849 8.292 15.292L14.292 9.292C14.4798 9.10423 14.7344 8.99874 15 8.99874C15.2656 8.99874 15.5202 9.10423 15.708 9.292C15.8958 9.47977 16.0013 9.73445 16.0013 10C16.0013 10.2656 15.8958 10.5202 15.708 10.708L11.414 15H23Z"
+            fill="rgba(0, 0, 0, .8)"
+          />
+        </svg>
       </div>
-      <div class="search__container flex flex-row flex-jc-c">
-          <input maxlength="20" type="text" class="movie-search-field clr-sec-l-text" placeholder="Search among all the movies">
-          <div class="img-container clr-ter-bg">
-            <img class="search-icon" src="./assets/images/search.svg" alt="search icon">
-          </div>
-      </div>
+      <ul class="movie-container mt flex flex-row" style="--mt : 4em;">
+        <li class="movie">
+          <img src="./assets/images/chichore.jpg" alt="movie thumbnail">
+          <h2 class="fw-400 fs-med text-align">chichore</h2>
+        </li>
+        <li class="movie">
+          <img src="./assets/images/ludo.jpg" alt="movie thumbnail">
+          <h2 class="fw-400 fs-med text-align">Ludo</h2>
+        </li>
+        <li class="movie">
+          <img src="./assets/images/godzilla.jpg" alt="movie thumbnail">
+          <h2 class="fw-400 fs-med text-align">godzilla</h2>
+        </li>
+        <li class="movie">
+          <img src="./assets/images/extraction.jpg" alt="movie thumbnail">
+          <h2 class="fw-400 fs-med text-align">Extraction</h2>
+        </li>
+        <li class="movie">
+          <img src="./assets/images/chichore.jpg" alt="movie thumbnail">
+          <h2 class="fw-400 fs-med text-align">chichore</h2>
+        </li>
+        <li class="movie">
+          <img src="./assets/images/godzilla.jpg" alt="movie thumbnail">
+          <h2 class="fw-400 fs-med text-align">godzilla</h2>
+        </li>
+        <li class="movie">
+          <img src="./assets/images/extraction.jpg" alt="movie thumbnail">
+          <h2 class="fw-400 fs-med text-align">extraction</h2>
+        </li>
+      </ul>
     </section>
     <script src="./assets/js/script.js" type="module"></script>
   </body>
