mixin copy-pasted

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </nav>
 
     <!-- hero and search -->
-    <section class="hero hide">
+    <section class="hero">
       <div class="hero__container clr-ter-text text-align">
         <h3 class="fs-s mt clr-ter-xl-text">Enjoy Watching Movies</h3>
         <h2 class="fs-xl mt clr-ter-text" style="--fs-xl: 2.5em">
@@ -99,7 +99,7 @@
     </section>
 
     <!-- movie category  -->
-    <section class="category clr-ter-bg mt mb hide" style="--mb: 3em">
+    <section class="category clr-ter-bg mt mb" style="--mb: 3em">
       <div class="description flex flex-col clr-pri-bg">
         <h2 class="fs-mid">Categories</h2>
         <p class="fs-s clr-sec-xl-text mt" style="--mt: 0.5em">
@@ -179,7 +179,7 @@
     </section>
 
     <!-- movie list  -->
-    <section class="movie-list clr-ter-bg mt mb hide" style="--mt: 2em">
+    <section class="movie-list clr-ter-bg mt mb" style="--mt: 2em">
       <h2 class="text-align capitalize fw-500">Action Movies</h2>
       <p class="clr-sec-l-text text-align mt" style="--mt: 0.5em">
         We are providing you a collection which you will love to watch
