media queries added

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <body class="flex flex-col clr-pri-bg">
     <!-- header and nav  -->
     <header class="flex flex-row flex-ai-c clr-ter-bg">
-      <h1 class="fs-m">Movie.</h1>
+      <h1 class="fs-l">Movie.</h1>
       <ul class="flex flex-row flex-jc-sa flex-ai-c ml" style="--ml: auto">
         <li class="clr-sec-xl-text fs-s active">Home</li>
         <li class="clr-sec-xl-text fs-s ml">Category</li>
         <li class="clr-sec-xl-text fs-s ml">Top List</li>
         <li class="clr-sec-xl-text fs-s ml">About Us</li>
       </ul>
-      <a href="#" class="ml" style="--ml: auto">Log in</a>
+      <a href="#" class="ml fs-s" style="--ml: auto">Log in</a>
       <button class="ml fs-s" style="--ml: 1em">Sign up</button>
     </header>
 
@@ -81,7 +81,7 @@
           </svg>
         </div>
       </div>
-      <div class="search__container flex flex-row flex-jc-c">
+      <div class="search__container flex flex-row flex-jc-c hide">
         <input
           maxlength="20"
           type="text"
@@ -351,7 +351,7 @@
 
     <!-- seat booking  -->
     <section class="book-seat flex flex-row clr-ter-bg mt mb" style="--mt: 2em;">
-      <div class="movie-wrapper mr" style="--mr:5em">
+      <div class="movie-wrapper mr">
         <img
           class="thumbnail"
           src="./assets/images/extraction.jpg"
