mobile size issue resolved

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
     </section>
 
     <!-- seat booking  -->
-    <section class="book-seat flex flex-row clr-ter-bg mt mb" style="--mt: 2em;">
+    <section class="book-seat flex flex-row flex-jc-c clr-ter-bg mt mb" style="--mt: 2em;">
       <div class="movie-wrapper mr">
         <img
           class="thumbnail"
@@ -371,7 +371,9 @@
           <h3 class="price fs-mel clr-sec-text">120.00</h3>
         </div>
       </div>
-      <div class="seat-book-area flex flex-col">
+
+      <!-- component where users can select there seats  -->
+      <div class="seat-book-area flex flex-col flex-ai-c flex-jc-c">
         <h2 class="fs-med fw-400">Select Seats :-</h2>
         <div class="seats mt mb">
           <ul class="row-1-front">
