--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
     <!-- movie list  -->
     <section class="movie-list clr-ter-bg mt mb" style="--mt: 2em" id="movie-list">
-      <h2 class="text-align capitalize fw-500">Action Movies</h2>
+      <h2 class="text-align capitalize fw-500">Movie List</h2>
       <p class="clr-sec-l-text text-align mt" style="--mt: 0.5em">
         We are providing you a collection which you will love to watch
       </p>
